# breeze

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: build-examples.yml  release.yml
examples/: analog_clock.rs  bevy_shapes3d.rs  bunnymark.rs  hello_audio.rs  hello_camera2d.rs  hello_input.rs  hello_light.rs  hello_model3d.rs  hello_music.rs  hello_scenes.rs  hello_shapes.rs  hello_shapes2d.rs  hello_shapes3d.rs  hello_sprite.rs  hello_system.rs  hello_text.rs  hello_window.rs  hello_world.rs
src/: audio.rs  camera.rs  common.rs  context.rs  engine.rs  input.rs  lib.rs  runner.rs  shapes.rs  sprite.rs  text.rs  window.rs
src/core/: fps.rs  mod.rs  scene.rs  system.rs
src/graphics/: commands.rs  geometry.rs  lights.rs  mod.rs  renderer.rs  shapes.rs  sprite.rs  text.rs
