[package]
name = "breeze"
version = "0.3.0"
description = "A wrapper around Bevy for easier game development."
authors = ["Peter Richmond"]
keywords = [
    "gamedev",
    "graphics",
    "bevy",
    "engine",
    "creative-coding"
]
categories = [
    "game-development",
    "game-engines",
    "graphics",
    "rendering",
    "multimedia"
]
license = "MIT"
repository = "https://github.com/burdockcascade/breeze"
edition = "2024"
exclude = [
    ".github",
    ".gitignore",
    ".release-please-manifest.json",
    "release-please-config.json",
    "assets/**",
    "examples/**",
]

[dependencies]
bevy = "0.18.0"

[dev-dependencies]
rand = "0.9.2"